Remove preserve-3d property to fix issue on firefox.

--- a/bathroom-happiness/css/style.css
+++ b/bathroom-happiness/css/style.css
@@ -6197,11 +6197,6 @@ body.water-therapy .main #shower-technology .shower-technology-description .show
   -o-transition: all 0.6s ease-out;
   -webkit-transition: all 0.6s ease-out;
   transition: all 0.6s ease-out;
-  -webkit-transform-style: preserve-3d;
-  -moz-transform-style: preserve-3d;
-  -ms-transform-style: preserve-3d;
-  -o-transform-style: preserve-3d;
-  transform-style: preserve-3d;
   position: relative;
   width: 320px;
   min-height: 325.87px;
@@ -6226,11 +6221,6 @@ body.water-therapy .main #shower-technology .shower-technology-description .show
   -o-transition: all 0.6s ease-out;
   -webkit-transition: all 0.6s ease-out;
   transition: all 0.6s ease-out;
-  -webkit-transform-style: preserve-3d;
-  -moz-transform-style: preserve-3d;
-  -ms-transform-style: preserve-3d;
-  -o-transform-style: preserve-3d;
-  transform-style: preserve-3d;
   position: absolute;
   top: 0;
   left: 0;
